force-app/main/default/objects/Account/fields/Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Turnover__c</fullName>
    <label>Annual Turnover</label>
    <length>50</length>
    <type>Text</type>
</CustomField>