force-app/main/default/objects/Account/fields/Backup_Details__c.field-meta.xml
<CustomField>
    <fullName>Backup_Details__c</fullName>
    <inlineHelpText>Brand
Vendor
AMC</inlineHelpText>
    <label>Backup Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>