force-app/main/default/objects/Account/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <label>Company Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Category</valueSetName>
    </valueSet>
</CustomField>