force-app/main/default/objects/Account/fields/Consider_for_Aug_2017_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Consider_for_Aug_2017_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider for Aug 2017 Campaign</label>
    <type>Checkbox</type>
</CustomField>