force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <inlineHelpText>Brand
No of users
Partner
For sales / support / operations
AMC</inlineHelpText>
    <label>CRM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>