force-app/main/default/objects/Account/fields/Databases__c.field-meta.xml
<CustomField>
    <fullName>Databases__c</fullName>
    <inlineHelpText>Applications using the databases
Backup
Vendor 
AMC</inlineHelpText>
    <label>Databases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>