force-app/main/default/objects/Account/fields/Date_Future_Plan_Captured__c.field-meta.xml
<CustomField>
    <fullName>Date_Future_Plan_Captured__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Future Plan Captured</label>
    <type>Date</type>
</CustomField>