force-app/main/default/objects/Account/fields/Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deal Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>