force-app/main/default/objects/Account/fields/Demo_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Demo_User_Name__c</fullName>
    <label>Demo User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>