force-app/main/default/objects/Account/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <inlineHelpText>Brand
Vendor
Applications covered
AMC</inlineHelpText>
    <label>DR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>