force-app/main/default/objects/Account/fields/Email_Of_Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Email_Of_Account_Owner_Manager__c</fullName>
    <label>Email Of Account Owner Manager</label>
    <type>Email</type>
</CustomField>