force-app/main/default/objects/Account/fields/Email_Solution__c.field-meta.xml
<CustomField>
    <fullName>Email_Solution__c</fullName>
    <inlineHelpText>Provider
Vendor
Hosted Exchange / On-premise Exchange / Office 365 or Gmail / Local Hosting Provided</inlineHelpText>
    <label>Email Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>