force-app/main/default/objects/Account/fields/Employee_Strength_Approx__c.field-meta.xml
<CustomField>
    <fullName>Employee_Strength_Approx__c</fullName>
    <label>Employee Strength Approx</label>
    <length>20</length>
    <type>Text</type>
</CustomField>