force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <inlineHelpText>Brand
Vendor
Backup</inlineHelpText>
    <label>ERP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>