force-app/main/default/objects/Account/fields/Future_Plan_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Plan_Review_Date__c</fullName>
    <label>Future Plan Review Date</label>
    <type>Date</type>
</CustomField>