force-app/main/default/objects/Account/fields/Future_Plans__c.field-meta.xml
<CustomField>
    <fullName>Future_Plans__c</fullName>
    <label>Future Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>