force-app/main/default/objects/Account/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <inlineHelpText>Depends on Company Category</inlineHelpText>
    <label>Industry / Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry_Vertical</valueSetName>
    </valueSet>
</CustomField>