force-app/main/default/objects/Account/fields/Is_Acc_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Acc_Owner__c</fullName>
    <formula>IF( Owner.Id == $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Acc Owner</label>
    <type>Checkbox</type>
</CustomField>