force-app/main/default/objects/Account/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <inlineHelpText>Only applicable for Salesforce Customers</inlineHelpText>
    <label>OrgID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>