force-app/main/default/objects/Account/fields/Other_Applications__c.field-meta.xml
<CustomField>
    <fullName>Other_Applications__c</fullName>
    <inlineHelpText>Industry / Business specific applications
Vendor
On Premise / Cloud</inlineHelpText>
    <label>Other Applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>