force-app/main/default/objects/Account/fields/Others_Specify__c.field-meta.xml
<CustomField>
    <fullName>Others_Specify__c</fullName>
    <label>Other Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>