force-app/main/default/objects/Account/fields/Physical_Server_Details__c.field-meta.xml
<CustomField>
    <fullName>Physical_Server_Details__c</fullName>
    <inlineHelpText>Number of Servers
Brand
Vendor
AMC</inlineHelpText>
    <label>Physical Server Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>