force-app/main/default/objects/Account/fields/Security_Appliance__c.field-meta.xml
<CustomField>
    <fullName>Security_Appliance__c</fullName>
    <inlineHelpText>Brand
Vendor
AMC</inlineHelpText>
    <label>Security Appliance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>