force-app/main/default/objects/Account/fields/Storage_Details__c.field-meta.xml
<CustomField>
    <fullName>Storage_Details__c</fullName>
    <inlineHelpText>Brand
Vendor
AMC</inlineHelpText>
    <label>Storage Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>