force-app/main/default/objects/Account/fields/Switches_Routers__c.field-meta.xml
<CustomField>
    <fullName>Switches_Routers__c</fullName>
    <inlineHelpText>Vendor
Brand
AMC</inlineHelpText>
    <label>Switches &amp; Routers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>