force-app/main/default/objects/Account/fields/Technology_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Technology_Maturity__c</fullName>
    <label>Technology Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leader</fullName>
            </value>
            <value>
                <fullName>Follower</fullName>
            </value>
            <value>
                <fullName>Laggard</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>