force-app/main/default/objects/Account/fields/Virtualization_Details__c.field-meta.xml
<CustomField>
    <fullName>Virtualization_Details__c</fullName>
    <inlineHelpText>Brand
Vendor
AMC</inlineHelpText>
    <label>Virtualization Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>