force-app/main/default/objects/Account/recordTypes/Principal_Account.recordType-meta.xml
<RecordType>
    <fullName>Principal_Account</fullName>
    <active>true</active>
    <description>Principal</description>
    <label>Principal Account</label>
</RecordType>