force-app/main/default/objects/Account/validationRules/Future_Plan_Review_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Plan_Review_Date</fullName>
    <active>true</active>
    <description>Validation for Future Plan Review Date</description>
    <errorConditionFormula>Future_Plan_Review_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Future Plan Review Date cannot be a date in the past</errorMessage>
</ValidationRule>