force-app/main/default/objects/Account/validationRules/Others_Category_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Others_Category_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Company_Category__c, &apos;Other&apos;), 
ISBLANK(Others_Specify__c))</errorConditionFormula>
    <errorMessage>Please enter Other category value</errorMessage>
</ValidationRule>