force-app/main/default/objects/Account/listViews/Account_Shared_With_Me.listView-meta.xml
<ListView>
    <fullName>Account_Shared_With_Me</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email_Of_Account_Owner_Manager__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Acc_Owner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts Shared With Me</label>
</ListView>