force-app/main/default/objects/Account/listViews/Accounts_Shortlisted_for_Active_Campaign.listView-meta.xml
<ListView>
    <fullName>Accounts_Shortlisted_for_Active_Campaign</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts Shortlisted for Active Campaign</label>
</ListView>