force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email_Of_Account_Owner_Manager__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Company_Category__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>