force-app/main/default/objects/Account/listViews/Principal_Account.listView-meta.xml
<ListView>
    <fullName>Principal_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email_Of_Account_Owner_Manager__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>GSTIN__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Principal_Account</value>
    </filters>
    <label>Principal Accounts</label>
</ListView>